# global-hotkey

./: Cargo.toml  README.md
.changes/: msrv.md  x11-f13-f24.md  x11rb.md
.github/workflows/: test.yml
src/: error.rs  lib.rs
src/platform_impl/linux/: mod.rs  wayland.rs  x11.rs
src/platform_impl/x11/: mod.rs
