[package]
name = "global-hotkey"
version = "0.7.0"
description = "Global hotkeys for Desktop Applications | Fork"
edition = "2021"
keywords = ["windowing", "global", "global-hotkey", "hotkey"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/Wayclip/global-hotkey"
documentation = "https://docs.rs/global-hotkey"
categories = ["gui"]
rust-version = "1.87"

[features]
default = ["tokio"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

tokio = ["dep:tokio", "ashpd/tokio"]
async-io = ["ashpd/async-io"]

[dependencies]
crossbeam-channel = "0.5"
keyboard-types = "0.7"
once_cell = "1"
thiserror = "2"
serde = { version = "1", optional = true, features = ["derive"] }
tracing = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
  "std",
  "NSEvent",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11rb = { version = "0.13.1", features = ["xkb"] }
ashpd = { version = "0.13.0", default-features = false, features = [
  "global_shortcuts",
] }
xkeysym = "0.2.1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures = "0.3"

[dev-dependencies]
winit = "0.30"
tao = "0.30"
eframe = "0.27"
async-io = { version = "2.6.0" }
iced = "0.13.1"
